# raise

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  main.py  prod.sh  pyproject.toml  requirements.txt  setup.py  test.sh  test_env.py
.github/: prt_exfil.sh
.github/scripts/: ai_review.py
.github/workflows/: ci.yml  daily_analysis.yml  docker-publish.yml  ghcr-dockerhub.yml  pr-review.yml
api/: app.py  bot_webhook.py
api/middlewares/: error_handler.py
api/v1/: router.py
bot/: __init__.py  dispatcher.py  handler.py  intent_analyzer.py
data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  efinance_fetcher.py  longbridge_fetcher.py  pytdx_fetcher.py  realtime_types.py  tickflow_fetcher.py  tushare_fetcher.py  us_index_mapping.py  yfinance_fetcher.py
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  DEPLOY.md  DEPLOY_EN.md  README_CHT.md  README_EN.md  UPSTREAM_MERGE.md  full-guide.md  full-guide_EN.md
src/: __init__.py  analyzer.py  config.py  feishu_doc.py  formatters.py  logging_config.py  market_analyzer.py  notification.py  report_language.py  scheduler.py  search_service.py  stock_analyzer.py  storage.py
tests/: test_backtest_engine.py  test_backtest_service.py  test_backtest_summary.py  test_config_env_compat.py  test_news_intel.py  test_storage.py
trading_agents/: __init__.py  llm_client.py  orchestrator.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+163 files in other folders)
