[project]
name = "raise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.12.0",
    "apscheduler>=3.10.0",
    "baostock>=0.8.0",
    "dingtalk-stream>=0.24.3",
    "discord-py>=2.0.0",
    "dotenv>=0.9.9",
    "efinance>=0.5.5",
    "fake-useragent>=1.4.0",
    "fastapi>=0.109.0",
    "google-generativeai>=0.8.0",
    "google-search-results>=2.4.0",
    "httpx[socks]>=0.28.1",
    "json-repair>=0.55.1",
    "lark-oapi>=1.0.0",
    "lxml-html-clean>=0.4.3",
    "markdown2>=2.4.0",
    "newspaper3k>=0.2.8",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pytdx>=1.72",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tushare>=1.4.0",
    "uvicorn[standard]>=0.27.0",
    "yfinance>=0.2.0",
]
